# polling

./: .example_env  .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  python-ci.yml
polling_api/: settings.py  urls.py  wsgi.py
polling_api/apps/choice/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
polling_api/apps/choice/migrations/: 0001_initial.py
polling_api/apps/choice/tests/: fixtures.yaml
polling_api/apps/journal/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
polling_api/apps/journal/migrations/: 0001_initial.py  0002_auto_20220428_1531.py  0002_auto_20220505_1500.py  0003_auto_20220505_1505.py  0004_auto_20220505_1527.py
polling_api/apps/journal/tests/: fixtures.yaml
polling_api/apps/question/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
polling_api/apps/question/migrations/: 0001_initial.py
polling_api/apps/question/tests/: fixtures.yaml
polling_api/apps/quiz/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
polling_api/apps/quiz/migrations/: 0001_initial.py
polling_api/apps/quiz/tests/: fixtures.yaml
polling_api/apps/user/: apps.py  models.py  serializers.py  urls.py  views.py
polling_api/apps/user/migrations/: 0001_initial.py
polling_api/apps/user/tests/: fixtures.yaml
polling_app/polling_app/: settings.py  urls.py
polling_app/quiz_api/: __init__.py  admin.py  apps.py  errors.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
